@@ -904,7 +904,7 @@ void InitGlobalEnv(void);
 Rboolean R_current_trace_state();
 Rboolean R_has_methods(SEXP);
 void R_InitialData(void);
-SEXP R_possible_dispatch(SEXP, SEXP, SEXP, SEXP);
+SEXP R_possible_dispatch(SEXP, SEXP, SEXP, SEXP, Rboolean);
 void InitMemory(void);
 void InitNames(void);
 void InitOptions(void);
